--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "express": "^4.18.2",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^9.0.0",
+    "passport": "^0.6.0",
     "pg": "^8.11.0",
+    "rand-token": "^1.0.1",
     "sequelize": "^6.31.1"
   }
 }
